Add "colspan" to ColumnHeader and change all the utilities to use the colspan value to determine XLS merged cell regions. (Report Headers, Column Headers, Detail lines, Report Notes, Summaries, grand totals) 	modified:   src/com/ansi/scilla/report/cashReceiptsRegister/CashReceiptsRegisterDetailReport.java 	modified:   src/com/ansi/scilla/report/reportBuilder/AbstractXLSBuilder.java 	modified:   src/com/ansi/scilla/report/reportBuilder/ReportBuilder.java 	modified:   src/com/ansi/scilla/report/reportBuilder/StandardReport.java 	modified:   src/com/ansi/scilla/report/reportBuilder/XLSBuilder.java 	modified:   src/com/ansi/scilla/report/reportBuilder/XLSReportBuilderUtils.java 	modified:   src/com/ansi/scilla/report/ticket/DispatchedOutstandingTicketReport.java 	modified:   test/com/ansi/scilla/report/test/DavesReportTester.java